--- a/package.json
+++ b/package.json
@@ -23,14 +23,17 @@
   },
   "homepage": "https://github.com/diffix/publisher#readme",
   "dependencies": {
-    "electron-snowpack": "*"
+    "electron-snowpack": "*",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@snowpack/plugin-typescript": "^1.2.1",
     "@types/snowpack-env": "^2.3.3",
     "electron": "12.0.5",
     "electron-builder": "^22.10.5",
     "npm-run-all": "^4.1.5",
-    "typescript": "^4.1.3"
+    "typescript": "^4.3.2"
   },
   "build": {
     "extends": "electron-snowpack/config/electron-builder.js"
