Add ability to compile in F# code

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "build": "electron-snowpack build",
     "clean": "electron-snowpack clean",
-    "dev": "electron-snowpack dev",
+    "dev:snowpack": "electron-snowpack dev",
+    "dev:fable": "dotnet fable watch src_dotnet/OpenDiffix.Publisher -o src/compiled --lang typescript --typedArrays false",
+    "dev": "run-p -l -n -r dev:*",
     "dist": "electron-builder",
     "dist:dir": "yarn dist --dir -c.compression=store -c.mac.identity=null",
     "open": "open dist/mac/${npm_package_name}.app",
