Move fable files into renderer
I'm not sure what the idea behind "renderer" folder is,
but it's enforced by the Snowpack plugin we used.

Maybe move away from this later on.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 dist
 node_modules
 .idea
-src/compiled
+src/renderer/compiled
 src_dotnet/OpenDiffix.Publisher/obj
 src_dotnet/OpenDiffix.Publisher/bin
