--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,7 @@
 {
   "extends": "electron-snowpack/config/tsconfig.json",
-  "include": ["src", "types"]
+  "include": ["src", "types"],
+  "compilerOptions": {
+    "allowJs": true
+  }
 }
