--- a/src_dotnet/OpenDiffix.Publisher/OpenDiffix.Publisher.fsproj
+++ b/src_dotnet/OpenDiffix.Publisher/OpenDiffix.Publisher.fsproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="Library.fs" />
+    <Compile Include="CsvProvider.fs" />
+    <Compile Include="Anonymizer.fs" />
   </ItemGroup>
 
   <ItemGroup>
