--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "electron-snowpack build",
     "clean": "electron-snowpack clean",
     "dev:snowpack": "electron-snowpack dev",
-    "dev:fable": "dotnet fable watch src_dotnet/OpenDiffix.Publisher -o src/renderer/compiled",
+    "dev:fable-backend": "dotnet fable watch src_dotnet/OpenDiffix.Publisher -o src/compiled",
+    "dev:fable-frontend": "dotnet fable watch src_dotnet/OpenDiffix.WebInterface -o src/renderer/compiled",
     "dev": "run-p -l -n -r dev:*",
     "dist": "electron-builder",
     "dist:dir": "yarn dist --dir -c.compression=store -c.mac.identity=null",
@@ -27,15 +28,13 @@
   "dependencies": {
     "electron-snowpack": "*",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-dropzone": "^11.3.2"
   },
   "devDependencies": {
-    "@snowpack/plugin-typescript": "^1.2.1",
-    "@types/snowpack-env": "^2.3.3",
     "electron": "12.0.5",
     "electron-builder": "^22.10.5",
-    "npm-run-all": "^4.1.5",
-    "typescript": "^4.3.2"
+    "npm-run-all": "^4.1.5"
   },
   "build": {
     "extends": "electron-snowpack/config/electron-builder.js"
