--- a/src_dotnet/OpenDiffix.Shared/OpenDiffix.Shared.fsproj
+++ b/src_dotnet/OpenDiffix.Shared/OpenDiffix.Shared.fsproj
@@ -5,13 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="CsvProvider.fs" />
-    <Compile Include="Anonymizer.fs" />
+    <Compile Include="SharedTypes.fs" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\DiffixReference\src\OpenDiffix.Core\OpenDiffix.Core.fsproj" />
-    <ProjectReference Include="..\OpenDiffix.Shared\OpenDiffix.Shared.fsproj" />
   </ItemGroup>
 
 </Project>
