--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ src/compiled
 src/renderer/compiled
 src_dotnet/OpenDiffix.Publisher/obj
 src_dotnet/OpenDiffix.Publisher/bin
+src_dotnet/OpenDiffix.WebInterface/obj
+src_dotnet/OpenDiffix.Shared/obj
