--- a/package.json
+++ b/package.json
@@ -32,9 +32,13 @@
     "react-dropzone": "^11.3.2"
   },
   "devDependencies": {
+    "@snowpack/plugin-postcss": "^1.4.0",
+    "autoprefixer": "^10.2.6",
     "electron": "12.0.5",
     "electron-builder": "^22.10.5",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.2.9",
+    "tailwindcss": "^2.1.1"
   },
   "build": {
     "extends": "electron-snowpack/config/electron-builder.js"
