--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
   "scripts": {
     "build": "electron-snowpack build",
     "clean": "electron-snowpack clean",
+    "pre-build:fable-backend": "dotnet fable src_dotnet/OpenDiffix.Publisher -o src/compiled",
+    "pre-build:fable-frontend": "dotnet fable src_dotnet/OpenDiffix.WebInterface -o src/renderer/compiled",
     "dev:snowpack": "electron-snowpack dev",
     "dev:fable-backend": "dotnet fable watch src_dotnet/OpenDiffix.Publisher -o src/compiled",
     "dev:fable-frontend": "dotnet fable watch src_dotnet/OpenDiffix.WebInterface -o src/renderer/compiled",
-    "dev": "run-p -l -n -r dev:*",
+    "watch": "run-p -l -n -c -r dev:*",
+    "pre-build": "run-p -l -n pre-build:*",
+    "dev": "run-s pre-build watch",
     "dist": "electron-builder",
     "dist:dir": "yarn dist --dir -c.compression=store -c.mac.identity=null",
     "open": "open dist/mac/${npm_package_name}.app",
