--- a/package.json
+++ b/package.json
@@ -3,22 +3,12 @@
   "version": "0.0.1",
   "private": true,
   "description": "Desktop app for anonymizing data using Open Diffix Publish",
-  "main": "index.ts",
+  "main": "./.webpack/main",
   "scripts": {
-    "build": "electron-snowpack build",
-    "clean": "electron-snowpack clean",
-    "pre-build:fable-backend": "dotnet fable src_dotnet/OpenDiffix.Publisher -o src/compiled",
-    "pre-build:fable-frontend": "dotnet fable src_dotnet/OpenDiffix.WebInterface -o src/renderer/compiled",
-    "dev:snowpack": "electron-snowpack dev",
-    "dev:fable-backend": "dotnet fable watch src_dotnet/OpenDiffix.Publisher -o src/compiled",
-    "dev:fable-frontend": "dotnet fable watch src_dotnet/OpenDiffix.WebInterface -o src/renderer/compiled",
-    "watch": "run-p -l -n -c -r dev:*",
-    "pre-build": "run-p -l -n pre-build:*",
-    "dev": "run-s pre-build watch",
-    "dist": "electron-builder",
-    "dist:dir": "yarn dist --dir -c.compression=store -c.mac.identity=null",
-    "open": "open dist/mac/${npm_package_name}.app",
-    "try": "run-s clean build dist:dir open"
+    "dev:forge": "electron-forge start",
+    "dev": "run-p dev:*",
+    "package": "electron-forge package",
+    "make": "electron-forge make"
   },
   "repository": {
     "type": "git",
@@ -30,21 +20,31 @@
   },
   "homepage": "https://github.com/diffix/publisher#readme",
   "dependencies": {
-    "electron-snowpack": "*",
+    "electron-squirrel-startup": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.2"
   },
   "devDependencies": {
-    "@snowpack/plugin-postcss": "^1.4.0",
+    "@babel/core": "^7.14.3",
+    "@babel/preset-env": "^7.14.4",
+    "@babel/preset-react": "^7.13.13",
+    "@electron-forge/cli": "^6.0.0-beta.57",
+    "@electron-forge/maker-deb": "^6.0.0-beta.57",
+    "@electron-forge/maker-rpm": "^6.0.0-beta.57",
+    "@electron-forge/maker-squirrel": "^6.0.0-beta.57",
+    "@electron-forge/maker-zip": "^6.0.0-beta.57",
+    "@electron-forge/plugin-webpack": "^6.0.0-beta.57",
     "autoprefixer": "^10.2.6",
-    "electron": "12.0.5",
-    "electron-builder": "^22.10.5",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^5.2.6",
+    "electron": "13.0.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.2.9",
-    "tailwindcss": "^2.1.1"
-  },
-  "build": {
-    "extends": "electron-snowpack/config/electron-builder.js"
+    "postcss-loader": "^5.3.0",
+    "postcss-preset-env": "^6.7.0",
+    "style-loader": "^2.0.0",
+    "tailwindcss": "^2.1.3",
+    "webpack": "^5.38.1"
   }
 }
