--- a/OpenDiffix.Publisher/OpenDiffix.Publisher.fsproj
+++ b/OpenDiffix.Publisher/OpenDiffix.Publisher.fsproj
@@ -6,14 +6,16 @@
 
   <ItemGroup>
     <Compile Include="SharedTypes.fs" />
-    <Compile Include="ColumnSelector.fs" />
-    <Compile Include="AnonymizedResult.fs" />
+    <Compile Include="IPC.fs" />
+    <Compile Include="ImportedComponents.fs" />
+    <Compile Include="App.fs" />
     <Compile Include="CsvProvider.fs" />
     <Compile Include="Anonymizer.fs" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Feliz" Version="1.45.0" />
+    <PackageReference Include="Feliz.UseElmish" Version="1.5.1" />
   </ItemGroup>
 
   <ItemGroup>
