--- a/OpenDiffix.Publisher/OpenDiffix.Publisher.fsproj
+++ b/OpenDiffix.Publisher/OpenDiffix.Publisher.fsproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <PackageReference Include="Feliz" Version="1.45.0" />
     <PackageReference Include="Feliz.UseElmish" Version="1.5.1" />
+    <PackageReference Include="Thoth.Json" Version="5.1.0" />
   </ItemGroup>
 
   <ItemGroup>
