Add some help for making a windows build
This is pretty rough, but helps us get started.
Very much taken from: https://gist.github.com/hackash/4c3c15151c2ba658d2b4f00cf463d711

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "package": "electron-forge package",
     "make:fable": "dotnet fable OpenDiffix.Publisher -o src/compiled",
     "make:forge": "electron-forge make",
+    "make:forge:windows": "NODE_ENV=production electron-forge make -p win32",
     "make": "NODE_ENV=production run-s make:fable make:forge"
   },
   "repository": {
