Render react at root

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,9 @@
       "node": {
         "extensions": [".js", ".jsx", ".ts", ".tsx"]
       }
+    },
+    "react": {
+      "version": "detect"
     }
   }
 }
