--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts,.tsx ."
+    "lint": "eslint --ext .ts,.tsx .",
+    "check-format": "prettier --check src",
+    "prettier": "prettier --write src"
   },
   "keywords": [],
   "license": "MIT",
@@ -74,11 +76,13 @@
     "css-loader": "^5.0.0",
     "electron": "13.1.1",
     "eslint": "^7.6.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "fork-ts-checker-webpack-plugin": "^6.0.1",
     "node-loader": "^2.0.0",
+    "prettier": "^2.3.1",
     "style-loader": "^2.0.0",
     "ts-loader": "^9.2.2",
     "typescript": "^4.0.2"
