--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Desktop app for anonymizing data using Open Diffix Publish",
   "main": ".webpack/main",
   "scripts": {
+    "build": "dotnet publish -o ./bin/ -c Release ./reference/src/OpenDiffix.CLI/",
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
