--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@types/node": "^15.12.2",
     "@types/react": "^17.0.9",
     "@types/react-dom": "^17.0.6",
+    "@types/react-sticky": "^6.0.4",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
     "css-loader": "^5.0.0",
@@ -95,6 +96,7 @@
     "antd": "^4.16.2",
     "electron-squirrel-startup": "^1.0.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-sticky": "^6.0.3"
   }
 }
