--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,7 @@
   },
   "rules": {
     "react/prop-types": "off",
-    "@typescript-eslint/no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }]
+    "@typescript-eslint/no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }],
+    "@typescript-eslint/no-empty-function": "off"
   }
 }
