Split aggregate columns in combined view

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "allowJs": true,
     "module": "commonjs",
     "jsx": "react",
+    "lib": ["ES2019", "DOM"],
     "skipLibCheck": true,
     "strict": true,
     "esModuleInterop": true,
