--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
               "owner": "diffix",
               "name": "publisher"
             },
-            "prerelease": true
+            "prerelease": true,
+            "draft": true
           }
         }
       ],
