--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "publisher",
   "productName": "Easy Diffix",
   "author": "Open Diffix",
-  "version": "0.1.0-alpha",
+  "version": "0.1.0",
   "description": "Desktop app for anonymizing data using Open Diffix Elm",
   "main": ".webpack/main",
   "scripts": {
