Pack and set browser window icon.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   "config": {
     "forge": {
       "packagerConfig": {
-        "extraResource": "bin",
+        "extraResource": [
+          "bin",
+          "assets"
+        ],
         "name": "easy_diffix",
         "icon": "assets/icon"
       },
