--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,9 +27,11 @@
     }
   },
   "rules": {
+    "no-empty": "warn",
     "prefer-const": "warn",
     "react/prop-types": "off",
     "@typescript-eslint/no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }],
-    "@typescript-eslint/no-empty-function": "off"
+    "@typescript-eslint/no-empty-function": "off",
+    "@typescript-eslint/no-non-null-assertion": "off"
   }
 }
