--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "dotnet publish -o ./bin/ -c Release ./reference/src/OpenDiffix.CLI/ -p:UseAppHost=True",
     "build-win": "dotnet publish -o ./bin/ -c Release ./reference/src/OpenDiffix.CLI/ -r win-x64 --self-contained true -p:PublishReadyToRun=true -p:PublishTrimmed=true",
     "build-linux": "dotnet publish -o ./bin/ -c Release ./reference/src/OpenDiffix.CLI/ -r linux-x64 --self-contained true -p:PublishReadyToRun=true -p:PublishTrimmed=true",
-    "build-osx": "dotnet publish -o ./bin/ -c Release ./reference/src/OpenDiffix.CLI/ -r osx-64 --self-contained true -p:PublishReadyToRun=true -p:PublishTrimmed=true",
+    "build-osx": "dotnet publish -o ./bin/ -c Release ./reference/src/OpenDiffix.CLI/ -r osx-x64 --self-contained true -p:PublishReadyToRun=true -p:PublishTrimmed=true",
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
