--- a/package.json
+++ b/package.json
@@ -121,7 +121,9 @@
     "@rehooks/component-size": "^1.0.3",
     "antd": "^4.16.9",
     "electron-squirrel-startup": "^1.0.0",
+    "immer": "^9.0.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "use-immer": "^0.6.0"
   }
 }
