Adds custom anonymization wrapper instead of relying on the `reference` one.

--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "description": "Desktop app for anonymizing data using Open Diffix Elm",
   "main": ".webpack/main",
   "scripts": {
-    "build": "dotnet publish -o ./bin/ -c Release ./reference/src/OpenDiffix.CLI/ -p:UseAppHost=True",
-    "build-win": "dotnet publish -o ./bin/ -c Release ./reference/src/OpenDiffix.CLI/ -r win-x64 --self-contained true -p:PublishReadyToRun=true -p:PublishTrimmed=true",
-    "build-linux": "dotnet publish -o ./bin/ -c Release ./reference/src/OpenDiffix.CLI/ -r linux-x64 --self-contained true -p:PublishReadyToRun=true -p:PublishTrimmed=true",
-    "build-osx": "dotnet publish -o ./bin/ -c Release ./reference/src/OpenDiffix.CLI/ -r osx-x64 --self-contained true -p:PublishReadyToRun=true -p:PublishTrimmed=true",
+    "build": "dotnet publish -o ./bin/ -c Release ./anonymizer/OpenDiffix.Service/ -p:UseAppHost=True",
+    "build-win": "dotnet publish -o ./bin/ -c Release ./anonymizer/OpenDiffix.Service/ -r win-x64 --self-contained true -p:PublishReadyToRun=true -p:PublishTrimmed=true",
+    "build-linux": "dotnet publish -o ./bin/ -c Release ./anonymizer/OpenDiffix.Service/ -r linux-x64 --self-contained true -p:PublishReadyToRun=true -p:PublishTrimmed=true",
+    "build-osx": "dotnet publish -o ./bin/ -c Release ./anonymizer/OpenDiffix.Service/ -r osx-x64 --self-contained true -p:PublishReadyToRun=true -p:PublishTrimmed=true",
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
