--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-in-viewport": "^1.0.0-alpha.19",
     "use-immer": "^0.6.0"
   }
 }
