--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,10 +29,11 @@
   "rules": {
     "no-empty": "warn",
     "prefer-const": "warn",
-    "react/prop-types": "off",
     "@typescript-eslint/no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }],
     "@typescript-eslint/no-empty-function": "off",
     "@typescript-eslint/no-non-null-assertion": "off",
+    "react/display-name": "off",
+    "react/prop-types": "off",
     "react-hooks/exhaustive-deps": [
       "warn",
       {
