Make test builds periodically.

--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -1,8 +1,10 @@
-name: cd
+name: test_build
 on:
   push:
     branches:
-      - deploy
+      - test_build
+  schedule:
+    - cron: '0 6 * * 1,4' # Make a fresh test build every Monday and Thursday, at 6:00 AM UTC.
 
 jobs:
   cd:
@@ -40,4 +42,4 @@ jobs:
         with:
           name: ${{ matrix.build-target }}
           path: out/make
-          retention-days: 7
+          retention-days: 10
