--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -7,7 +7,7 @@ on:
     - cron: '0 6 * * 1,4' # Make a fresh test build every Monday and Thursday, at 6:00 AM UTC.
 
 jobs:
-  cd:
+  build:
     runs-on: ${{ matrix.os }}
 
     strategy:
