--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -33,7 +33,7 @@ jobs:
           dotnet-version: 5.0.x
       - name: Install dependencies
         run: npm install
-      - name: Build reference CLI
+      - name: Build Service
         run: npm run build-${{ matrix.build-target }}
       - name: Make
         run: npm run make
