--- a/.github/workflows/dev_build.yml
+++ b/.github/workflows/dev_build.yml
@@ -21,12 +21,9 @@ jobs:
       - name: Install Service dependencies
         working-directory: anonymizer
         run: dotnet tool restore
-      - name: Check TS files format
+      - name: Check files format
         run: npm run check-format
-      - name: Check F# files format
-        working-directory: anonymizer
-        run: dotnet fantomas --check -r OpenDiffix.Service
-      - name: Run TS linter
+      - name: Run linter
         run: npm run lint
       - name: Build Service
         run: npm run build
