--- a/package.json
+++ b/package.json
@@ -125,9 +125,11 @@
     "electron-squirrel-startup": "^1.0.0",
     "immer": "^9.0.5",
     "lodash": "^4.17.21",
+    "node-polyfill-webpack-plugin": "^1.1.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-in-viewport": "^1.0.0-alpha.19",
+    "react-markdown": "^7.0.1",
     "use-immer": "^0.6.0"
   }
 }
