--- a/package.json
+++ b/package.json
@@ -130,6 +130,7 @@
     "react-dom": "^17.0.2",
     "react-in-viewport": "^1.0.0-alpha.19",
     "react-markdown": "^7.0.1",
+    "remark-gfm": "^2.0.0",
     "use-immer": "^0.6.0"
   }
 }
