--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,7 +37,7 @@
     "react-hooks/exhaustive-deps": [
       "warn",
       {
-        "additionalHooks": "(useMemoStable)"
+        "additionalHooks": "(useMemoStable|useEffectWithChanges)"
       }
     ]
   }
