Fix package name.
This generates a warning in VS Code, but it works under both Linux and Windows,
and it is better than a name with underscores.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "diffix_desktop",
+  "name": "DiffixForDesktop",
   "productName": "Diffix for Desktop",
   "author": "Open Diffix",
   "version": "0.2.2",
@@ -28,7 +28,7 @@
           "assets",
           "docs"
         ],
-        "name": "Diffix for Desktop",
+        "name": "DiffixForDesktop",
         "icon": "assets/icon"
       },
       "makers": [
