--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "make": "electron-forge make",
     "publish": "electron-forge publish",
     "lint": "eslint --ext .ts,.tsx .",
-    "check-format": "prettier --check src && cd anonymizer && dotnet fantomas --check -r OpenDiffix.Service",
-    "format": "prettier --write src && cd anonymizer && dotnet fantomas -r OpenDiffix.Service"
+    "check-format": "prettier --check src && cd anonymizer && dotnet fantomas --check -r .",
+    "format": "prettier --write src && cd anonymizer && dotnet fantomas -r ."
   },
   "keywords": [],
   "license": "BUSL-1.1",
