--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
     "@rehooks/component-size": "^1.0.3",
     "antd": "^4.16.9",
     "classnames": "^2.3.1",
+    "electron-fetch": "^1.7.4",
     "electron-squirrel-startup": "^1.0.0",
     "immer": "^9.0.5",
     "lodash": "^4.17.21",
@@ -137,6 +138,7 @@
     "react-markdown": "^7.0.1",
     "remark-gfm": "^2.0.0",
     "remark-slug": "^7.0.0",
+    "semver": "^7.3.5",
     "tiny-invariant": "^1.1.0",
     "use-immer": "^0.6.0"
   }
