--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "@types/node": "^16.4.6",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
+    "@types/semver": "^7.3.9",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "css-loader": "^6.2.0",
