--- a/anonymizer/OpenDiffix.Service.Tests/OpenDiffix.Service.Tests.fsproj
+++ b/anonymizer/OpenDiffix.Service.Tests/OpenDiffix.Service.Tests.fsproj
@@ -5,6 +5,7 @@
     <GenerateProgramFile>false</GenerateProgramFile>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Led.Tests.fs" />
     <Compile Include="Program.Tests.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
