--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "publish": "electron-forge publish",
     "lint": "eslint --max-warnings 0 --ext .ts,.tsx .",
     "check-format": "prettier --check src && cd anonymizer && dotnet fantomas --check -r .",
-    "format": "prettier --write src && cd anonymizer && dotnet fantomas -r ."
+    "format": "prettier --write src && cd anonymizer && dotnet fantomas -r .",
+    "preversion": "node version.js check",
+    "version": "node version.js update && git add LICENSE.md CHANGELOG.md",
+    "postversion": "git push --follow-tags && echo Release commit created, tagged and pushed!"
   },
   "keywords": [],
   "license": "BUSL-1.1",
