--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "DiffixForDesktop",
   "productName": "Diffix for Desktop",
-  "author": "Open Diffix",
+  "author": "Max Planck Gesellschaft (MPG)",
   "version": "0.4.0",
   "description": "Desktop application for anonymizing data using Open Diffix Elm.",
   "main": ".webpack/main",
