LED with isolator heuristic

--- a/anonymizer/OpenDiffix.Service.Tests/OpenDiffix.Service.Tests.fsproj
+++ b/anonymizer/OpenDiffix.Service.Tests/OpenDiffix.Service.Tests.fsproj
@@ -5,7 +5,9 @@
     <GenerateProgramFile>false</GenerateProgramFile>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="AggregationHooks.Tests.fs" />
+    <Compile Include="TestHelpers.fs" />
+    <Compile Include="Led.Tests.fs" />
+    <Compile Include="StarBucket.Tests.fs" />
     <Compile Include="Program.Tests.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
