--- a/anonymizer/OpenDiffix.Service/OpenDiffix.Service.fsproj
+++ b/anonymizer/OpenDiffix.Service/OpenDiffix.Service.fsproj
@@ -6,7 +6,9 @@
     <Description>Interface to the Open Diffix Reference anonymizer</Description>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="AggregationHooks.fs" />
+    <Compile Include="Utils.fs" />
+    <Compile Include="Led.fs" />
+    <Compile Include="StarBucket.fs" />
     <Compile Include="JsonEncodersDecoders.fs" />
     <Compile Include="CSVDataProvider.fs" />
     <Compile Include="Program.fs" />
