--- a/.github/workflows/dev_build.yml
+++ b/.github/workflows/dev_build.yml
@@ -14,7 +14,7 @@ jobs:
           node-version: 16
       - uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 5.0.100
+          dotnet-version: 6.0.x
       - name: Install GUI dependencies
         run: npm install
       - name: Install Service dependencies
