--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "@electron-forge/plugin-webpack": "6.0.0-beta.59",
     "@electron-forge/publisher-github": "^6.0.0-beta.59",
     "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
+    "@types/i18next-fs-backend": "^1.1.2",
     "@types/lodash": "^4.14.172",
     "@types/mdast": "^3.0.10",
     "@types/node": "^16.4.6",
@@ -132,6 +133,8 @@
     "classnames": "^2.3.1",
     "electron-fetch": "^1.7.4",
     "electron-squirrel-startup": "^1.0.0",
+    "i18next": "^21.8.14",
+    "i18next-fs-backend": "^1.1.4",
     "immer": "^9.0.5",
     "lodash": "^4.17.21",
     "mdast-util-to-string": "^3.1.0",
@@ -139,6 +142,7 @@
     "node-polyfill-webpack-plugin": "^1.1.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.18.1",
     "react-in-viewport": "^1.0.0-alpha.19",
     "react-markdown": "^7.0.1",
     "remark-gfm": "^2.0.0",
